--- a/ps1_testing/Jenkinsfile
+++ b/ps1_testing/Jenkinsfile
@@ -11,7 +11,8 @@ pipeline{
         }
         stage('Build Number Check'){
 			      steps{
-				        powershell 'Write-Host "The build number is ${BUILD_VERSION}"'
+				      echo '${env.BUILD_NUMBER}'
+				      powershell 'Write-Host "The build number is ${BUILD_VERSION}"'
 			      }
 		    }    
     }
