--- a/ps1_testing/Jenkinsfile
+++ b/ps1_testing/Jenkinsfile
@@ -1,8 +1,5 @@
 pipeline{
     agent any 
-	environment{
-		BUILD_VERSION= '${env.BUILD_NUMBER}'
-	}
     stages{
         stage('Source_Code_Checkout'){
             steps{
@@ -11,8 +8,8 @@ pipeline{
         }
         stage('Build Number Check'){
 			      steps{
-				      //echo '${env.BUILD_NUMBER}'
-				      powershell 'Write-Host "The build number is ${currentBuild.number}"'
+				      properties = readProperties file: 'build.properties'
+				      echo '${properties.MAJOR_VERSION}'
 			      }
 		    }    
     }
