--- a/ps1_testing/Jenkinsfile
+++ b/ps1_testing/Jenkinsfile
@@ -9,6 +9,7 @@ node{
 	minor= props['MINOR_VERSION']
 	patch= props['PATCH_VERSION']
 	buildNo= major+"."+minor+"."+patch
+	bat 'echo ${buildNo}'
 }
 pipeline{
     agent any 
