--- a/ps1_testing/Jenkinsfile
+++ b/ps1_testing/Jenkinsfile
@@ -14,6 +14,7 @@ pipeline{
         }
         stage('Build Number Check'){
 		steps{	
+			script{
 			props = readProperties file: 'build.properties'
 			major= props['MAJOR_VERSION']
 			minor= props['MINOR_VERSION']
@@ -21,6 +22,7 @@ pipeline{
 			buildNo= major+"."+minor+"."+patch
 			bat 'echo ${buildNo}'
 		}
+		}	
 	}    
     }
 }
