--- a/ps1_testing/Jenkinsfile
+++ b/ps1_testing/Jenkinsfile
@@ -8,6 +8,7 @@ pipeline{
         }
         stage('Build Number Check'){
 		steps{	
+			powershell '$BUILD_NUMBER= $env:BUILD_NUMBER'
 			powershell 'Write-Host $BUILD_NUMBER'
 		}	
 	}    
