--- a/ps1_testing/Jenkinsfile
+++ b/ps1_testing/Jenkinsfile
@@ -8,7 +8,7 @@ pipeline{
         }
         stage('Build Number Check'){
 		steps{	
-			powershell 'Write-Host "The build number is ${env.BUILD_NUMBER}"'
+			powershell 'Write-Host "The build number is $env.BUILD_NUMBER"'
 		}	
 	}    
     }
