--- a/ps1_testing/Jenkinsfile
+++ b/ps1_testing/Jenkinsfile
@@ -1,5 +1,8 @@
 pipeline{
     agent any 
+	environment{
+		BUILD_NUMBER=${env.BUILD_NUMBER}
+	}
     stages{
         stage('Source_Code_Checkout'){
             steps{
