--- a/ps1_testing/Jenkinsfile
+++ b/ps1_testing/Jenkinsfile
@@ -9,7 +9,7 @@ pipeline{
         stage('Build Number Check'){
 		steps{	
 			script{
-			env.Result= powershell(returnStdout: true, script:build_number.ps1)
+			powershell './build_number.ps1'
 			currentBuild.displayName = $buildNo
 		}
 	    }	
