--- a/ps1_testing/Jenkinsfile
+++ b/ps1_testing/Jenkinsfile
@@ -14,6 +14,9 @@ agent any
 			currentBuild.displayName = "${buildNumber}"
 		}
 	    }	
-	}    
+	}
+	    stage('Global Check'){
+		    echo '${buildNumber}'
+	    }
     }
 }
