--- a/ps1_testing/Jenkinsfile
+++ b/ps1_testing/Jenkinsfile
@@ -13,6 +13,7 @@ agent any
 			def buildNumber= powershell (returnStdout: true, script: 'Get-Content ./buildNo.txt').trim()
 			currentBuild.displayName = "${buildNumber}"
 			env.build_no= "${buildNumber}"
+			echo '${env.build_no}'
 		}
 	    }	
 	}
