--- a/ps1_testing/Jenkinsfile
+++ b/ps1_testing/Jenkinsfile
@@ -12,13 +12,14 @@ agent any
 			def file= powershell returnStdout: true, script: './build_number.ps1'
 			def buildNumber= powershell (returnStdout: true, script: 'Get-Content ./buildNo.txt').trim()
 			currentBuild.displayName = "${buildNumber}"
-			env.BUILD_NUMBER= buildNumber
+			env.buildNo= powershell (returnStdout: true, script: 'Get-Content ./buildNo.txt').trim()
+				print ${env.buildNo}
 		}
 	    }	
 	}
 	    stage('Global Check'){
 		    steps{
-		    echo '${env.BUILD_NUMBER}'
+		    echo '${env.buildNo}'
 		    }
 	    }
     }
