--- a/ps1_testing/Jenkinsfile
+++ b/ps1_testing/Jenkinsfile
@@ -8,12 +8,13 @@ agent any
 			def file= powershell returnStdout: true, script: './build_number.ps1'
 			def buildNumber= powershell (returnStdout: true, script: 'Get-Content ./buildNo.txt').trim()
 			currentBuild.displayName = "${buildNumber}"
+			env.buildNo= buildNumber
 		}
 	    }	
 	}
 	    stage('Check'){
 		    steps{
-			    echo "${env.BUILD_DISPLAY_NAME}"
+			    echo "${env.buildNo}"
 		    }
 	    }
     }
