--- a/ps1_testing/Jenkinsfile
+++ b/ps1_testing/Jenkinsfile
@@ -19,18 +19,17 @@ agent any
 	    }
 	    stage('Build-Management'){
 		    steps{
-			    rtUpload (
-    				serverId: 'generic-libs-prod',
-    				spec: '''{
-          				"files": [
-            					{
-              						"pattern": "temp/*.zip",
-              						"target": "webapp/source-code/"
-            					}
-         				]
-    				}''',
-			buildName: 'flaskapp',
-			)
+			    script{
+			    	def uploadSpec = """{
+  					"files": [
+    						{
+     						 "pattern": "source-repo/*.zip",
+      						"target": "flaskapp/"
+   						 }
+ 					]
+				}"""
+				server.upload spec: uploadSpec
+			    }
 		    }
 	    }
     }
