--- a/ps1_testing/Jenkinsfile
+++ b/ps1_testing/Jenkinsfile
@@ -24,7 +24,7 @@ agent any
     					spec: '''{
           					"files": [
             						{
-              						"pattern": "source-repo/*.zip",
+              						"pattern": "./source-repo/*.zip",
              						 "target": "bazinga/"
            				 		}
           					]
