--- a/ps1_testing/Jenkinsfile
+++ b/ps1_testing/Jenkinsfile
@@ -32,5 +32,20 @@ agent any
 				)
 		    }
 	    }
+	    stage('Artifact-Download'){
+		    steps{
+			    rtDownload (
+   				 serverId: 'generic-libs-prod',
+    					spec: '''{
+          					"files": [
+            						{
+              						"pattern": "generic-libs-prod/*.zip",
+             						 "target": "./"
+           				 		}
+          					]
+   					 }''',
+				)
+		    }
+	    }
     }
 }
