--- a/ps1_testing/Jenkinsfile
+++ b/ps1_testing/Jenkinsfile
@@ -29,6 +29,7 @@ agent any
            				 		}
           					]
    					 }''',
+				    buildNumber: '${env.buildNo}',
 				)
 		    }
 	    }
@@ -39,11 +40,12 @@ agent any
     					spec: '''{
           					"files": [
             						{
-              						"pattern": "generic-libs-prod/*-${env.buildNo}.zip",
+              						"pattern": "generic-libs-prod/*.zip",
              						 "target": "./"
            				 		}
           					]
    					 }''',
+				    buildNumber: '${env.buildNo}',
 				)
 		    }
 	    }
