--- a/ps1_testing/Jenkinsfile
+++ b/ps1_testing/Jenkinsfile
@@ -29,6 +29,7 @@ agent any
            				 		}
           					]
    					 }''',
+				    buildName: 'Flask-App',
 				)
 			    			    
 			rtPublishBuildInfo (
