--- a/ps1_testing/Jenkinsfile
+++ b/ps1_testing/Jenkinsfile
@@ -30,11 +30,13 @@ agent any
           					]
    					 }''',
 				    buildName: 'Flask-App',
+				    buildNumber: 'BUILD_NUMBER',
 				)
 			    			    
 			rtPublishBuildInfo (
     				serverId: 'generic-libs-prod',
 				buildName: 'Flask-App',
+				buildNumber: 'BUILD_NUMBER',
 			)
 		    }
 	    }
@@ -51,6 +53,7 @@ agent any
           					]
    					 }''',
 				    buildName: 'Flask-App',
+				    buildNumber: 'BUILD_NUMBER',
 				)
 		    }
 	    }
