--- a/ps1_testing/Jenkinsfile
+++ b/ps1_testing/Jenkinsfile
@@ -57,5 +57,12 @@ agent any
 				)
 		    }
 	    }
+	    stage('Deployment'){
+		    steps{
+	    		build job: 'ps1_testing/cd-pipeline', parameters: [
+                	string(name: 'buildVersion', value: $buildNo)
+                ]
+		    }
+	    }
     }
 }
