--- a/ps1_testing/Jenkinsfile
+++ b/ps1_testing/Jenkinsfile
@@ -60,7 +60,7 @@ agent any
 	    stage('Deployment'){
 		    steps{
 	    		build job: 'ps1_testing/cd-pipeline', parameters: [
-				string(name: 'buildVersion', value: $buildNo)
+				string(name: 'buildVersion', value: buildNo)
                 ]
 		    }
 	    }
