--- a/sonar_testing/Jenkinsfile
+++ b/sonar_testing/Jenkinsfile
@@ -28,8 +28,7 @@ agent any
 	    	    stage('SonarQube analysis') {
     			steps {
     				withSonarQubeEnv() {
-        			powershell
-					'''
+        			powershell'''
          				-Dsonar.projectKey=projectKey \
          				-Dsonar.projectName=projectName \
          				-Dsonar.sources=src/ \
