--- a/sonar_testing/Jenkinsfile
+++ b/sonar_testing/Jenkinsfile
@@ -20,12 +20,7 @@ agent any
 			    powershell './build_scripts/zip_creation.ps1'
 		    }
 	    }
-// 	    stage('Code Analysis'){
-// 		    steps{
-// 			    powershell './code_analysis/analysis.ps1'
-// 		    }
-// 	    }
-	    	    stage('SonarQube analysis') {
+	    stage('SonarQube analysis') {
     			steps {
     				script {
             				def SONARSCANNER = tool "sonar-scanner";
@@ -35,36 +30,34 @@ agent any
     			}
      		}
 	}
-   	stage('SQuality Gate') {
+   	stage('SonarQuality Gate') {
      		steps {
-       			timeout(time: 1, unit: 'MINUTES') {
        			waitForQualityGate abortPipeline: true
-       		}
-  	}
+  		}
 	}
-// 	    stage('Build-Management'){
-// 		    steps{
-// 			    rtUpload (   
-//    				 serverId: 'generic-libs-prod',
-//     					spec: '''{
-//           					"files": [
-//             						{
-//               						"pattern": "./source-repo/app-$buildNo.zip",
-//              						 "target": "generic-libs-prod/"
-//            				 		}
-//           					]
-//    					 }''',
-// 				    buildName: 'Flask-App',
-// 				    buildNumber: buildNo,
-// 				)
+	    stage('Build-Management'){
+		    steps{
+			    rtUpload (   
+   				 serverId: 'generic-libs-prod',
+    					spec: '''{
+          					"files": [
+            						{
+              						"pattern": "./source-repo/app-$buildNo.zip",
+             						 "target": "generic-libs-prod/"
+           				 		}
+          					]
+   					 }''',
+				    buildName: 'Flask-App',
+				    buildNumber: buildNo,
+				)
 			    			    
-// 			rtPublishBuildInfo (
-//     				serverId: 'generic-libs-prod',
-// 				buildName: 'Flask-App',
-// 				buildNumber: buildNo,
-// 			)
-// 		    }
-// 	    }
+			rtPublishBuildInfo (
+    				serverId: 'generic-libs-prod',
+				buildName: 'Flask-App',
+				buildNumber: buildNo,
+			)
+		    }
+	    }
 
     }
 }
