--- a/sonar_testing/Jenkinsfile
+++ b/sonar_testing/Jenkinsfile
@@ -32,7 +32,9 @@ agent any
 	}
    	stage('SonarQuality Gate') {
      		steps {
-       			waitForQualityGate abortPipeline: true
+			timeout(time: 1, unit: ‘MINUTES’){
+       				waitForQualityGate abortPipeline: true
+			}
   		}
 	}
 	    stage('Build-Management'){
