--- a/sonar_testing/Jenkinsfile
+++ b/sonar_testing/Jenkinsfile
@@ -30,13 +30,13 @@ agent any
     			}
      		}
 	}
-   	stage('SonarQuality Gate') {
-     		steps {
-			timeout(time: 1, unit: ‘MINUTES’){
-       				waitForQualityGate abortPipeline: true
+   	stage (“Sonar Quality Gate”) {
+			steps {
+				timeout(time: 1, unit: ‘MINUTES’) {
+					waitForQualityGate abortPipeline: true
+					}
 			}
-  		}
-	}
+		}
 	    stage('Build-Management'){
 		    steps{
 			    rtUpload (   
