--- a/sonar_testing/Jenkinsfile
+++ b/sonar_testing/Jenkinsfile
@@ -30,7 +30,7 @@ agent any
     			}
      		}
 	}
-   	stage (“Sonar Quality Gate”) {
+   	stage ('Sonar Quality Gate') {
 			steps {
 				timeout(time: 1, unit: ‘MINUTES’) {
 					waitForQualityGate abortPipeline: true
