--- a/sonar_testing/Jenkinsfile
+++ b/sonar_testing/Jenkinsfile
@@ -30,13 +30,15 @@ agent any
     			}
      		}
 	}
-   	stage ('Sonar Quality Gate') {
-			steps {
-				timeout(time: 1, unit: ‘MINUTES’) {
-					waitForQualityGate abortPipeline: true
-					}
-			}
-		}
+   	stage("Quality Gate") {
+            steps {
+                timeout(time: 1, unit: 'MINUTES') {
+                    // Parameter indicates whether to set pipeline to UNSTABLE if Quality Gate fails
+                    // true = set pipeline to UNSTABLE, false = don't
+                    waitForQualityGate abortPipeline: true
+                }
+            }
+        }
 	    stage('Build-Management'){
 		    steps{
 			    rtUpload (   
