--- a/sonar_testing/Jenkinsfile
+++ b/sonar_testing/Jenkinsfile
@@ -74,7 +74,7 @@ environment{
 // 	    }
 	    stage('ECR Image Push'){
 		    steps{
-			bat 'docker login --username AWS --password AWS_AP_SOUTH_1_KEY 975072647018.dkr.ecr.ap-south-1.amazonaws.com'
+			bat 'aws ecr get-login-password --region ap-south-1 | docker login --username AWS --password-stdin 975072647018.dkr.ecr.ap-south-1.amazonaws.com'
 			bat 'docker tag flask-app:latest 975072647018.dkr.ecr.ap-south-1.amazonaws.com/flask-app:${buildNo}' 
 			bat 'docker push 975072647018.dkr.ecr.ap-south-1.amazonaws.com/demo-repo:${buildNo}'    
 		    }
