--- a/sonar_testing/Jenkinsfile
+++ b/sonar_testing/Jenkinsfile
@@ -1,10 +1,6 @@
 pipeline{
 agent any
 	
-environment{
-        AWS_AP_SOUTH_1_KEY= credentials('jenkins-docker-aws')
-    }
-	
     stages{
         stage('Pre-Flight Checks'){
             steps{
@@ -74,9 +70,10 @@ environment{
 // 	    }
 	    stage('ECR Image Push'){
 		    steps{
-			bat 'aws ecr get-login-password --region ap-south-1 | docker login --username AWS --password-stdin 975072647018.dkr.ecr.ap-south-1.amazonaws.com'
-			bat 'docker tag flask-app:latest 975072647018.dkr.ecr.ap-south-1.amazonaws.com/flask-app:${buildNo}' 
-			bat 'docker push 975072647018.dkr.ecr.ap-south-1.amazonaws.com/demo-repo:${buildNo}'    
+			withDockerRegistry([url: "https://975072647018.dkr.ecr.ap-south-1.amazonaws.com/demo-repo",credentialsId: "Docker-AWS-Integration"]){
+				bat 'docker tag flask-app:latest 975072647018.dkr.ecr.ap-south-1.amazonaws.com/flask-app:${buildNo}' 
+				bat 'docker push 975072647018.dkr.ecr.ap-south-1.amazonaws.com/demo-repo:${buildNo}' 
+			}
 		    }
 	    }
     }
